2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b213

	* Removed one warning and one potential warning.

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b212

	* FIxed setup/check_version.php so it actually works with partially 
	  upgraded 1.4 Galleries.

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b211

	* Update manifest, and stop error messages if build_manifest.php
	  viewed via browsers.

2003-11-06 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b210

        * Language: Found untranslated strings, Synced all languages against this.

        * Language: Update German (de_DE), Suomi (fi_FI)

2003-11-04 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b209

        * Language: Update German (de_DE), Suomi (fi_FI)

2003-11-04 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b208

        * Bugfix: Fixed Typo and Warning (thanks to Seta)

2003-11-03 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b207

	* Language: Updated Suomi (fi_FI), Spanish (es_ES), German (de_DE)

	* Change: Updated Language README

2003-11-03  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b206

	* Work around a PHP bug on OpenBSD where if you store the results of 
	  ceil() in a session variable, it goes in as a float (eg "1.0000")
	  instead of an int, triggering OpenBSD's you-can't-serialize-a-float
	  serialization bug.

2003-11-03  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b205

	* Fixed a bug where we were comparing old style uids (as would be found
	  in an album created before the uid format change) agains new style
	  uids.  Fixed it the right way -- we now upgrade the album owner uid,
	  permission uids, item owner uids and comment owner uids to the new
	  style.

2003-11-02 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b204

	* Language: Updated:
			Vietnamese (ja_JP)
			Swedish (sv_SE)
			Japanese (ja_JP)

	* Bugfix: Added missing <?php echo ?> around a var

	* Bugfix: Added nls Infos for en_US


2003-11-02 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b203
