@@ -49,6 +49,10 @@ div#top		{ width: 200px; margin-left: auto; margin-right: auto; text-align:cente
 		  padding:2px; padding-right:20px; padding-left:20px;
 		}
 
+.successlong    { font-weight:bold; background-color: green; color: #FFFFFF ;
+		  width: 100%; padding:2px; 
+		}
+
 
 .warning        { font-weight:bold; background-color: #FFFF33; color: #000000 ;
 		  width: 150px; padding:2px; 
