@@ -1,3 +1,9 @@
+2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b214
+
+	* Fix check_versions.php so it runs on Windows box.
+
+	* Tweaked styles for check_versions.php.
+
 2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b213
 
 	* Removed one warning and one potential warning.
